fix incorrect path for women.js

--- a/women.html
+++ b/women.html
@@ -30,7 +30,7 @@
       </section>
     
 
-      <script src="../javaScript/women.js"></script>
+      <script src="./javaScript/women.js"></script>
     
 </body>
 </html>
