modify style.css and desc.html

--- a/desc.html
+++ b/desc.html
@@ -10,6 +10,11 @@
 
     <nav>
         <a href="#" class="logo" id="logo">Creative Store</a>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </div>
         <ul class="menu">
           <li class="menu-item" id="men"><a href="#">Men</a></li>
           <li class="menu-item" id="women"><a href="#">Women</a></li>
