--- a/desc.html
+++ b/desc.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+  <header>
     <nav>
         <a href="#" class="logo" id="logo">Creative Store</a>
         <div class="hamburger">
@@ -23,6 +23,7 @@
         </ul>
         <a href="#" class="checkout-icon" id="checkout-icon">&#128722; Checkout <span id="checkout-counter">0</span></a>
       </nav>
+    </header>
       <section>
         <div  id="desc-items-div"></div>
       </section>
